[package]
name = "feignhttp"
version = "0.3.3"
authors = ["dxx <dx1898@foxmail.com>"]
edition = "2021"
description = "Declarative HTTP client for rust"
documentation = "https://docs.rs/feignhttp"
homepage = "https://github.com/dxx/feignhttp"
repository = "https://github.com/dxx/feignhttp"
categories = ["web-programming::http-client"]
keywords = ["http", "request", "client"]
readme = "README.md"
license = "MIT"

exclude = [
    "examples/**",
]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[workspace]
members = ["codegen"]

[features]
default = ["reqwest-client"]

reqwest-client = ["reqwest", "reqwest/json"]
isahc-client = ["isahc", "isahc/json"]

[dependencies]
feignhttp-codegen = { version = "0.3", path = "codegen" }

async-trait = "0.1"
http = "0.2"
url = "2.2"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
log = "0.4"

# Optional deps...

## reqwest
reqwest = { version = "0.11", optional = true }

## isahc
isahc = { version = "1.2", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.12.0"
mockito = "0.23.3"
env_logger = "0.8.3"
