[package]
name = "feignhttp-codegen"
version = "0.2.0"
authors = ["dxx <1827939333@qq.com>"]
edition = "2018"
description = "FeignHttp macro support"
documentation = "https://docs.rs/feignhttp"
homepage = "https://github.com/dxx/feignhttp"
repository = "https://github.com/dxx/feignhttp"
readme = "README.md"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
