[package]
name = "feignhttp-codegen"
version = "0.4.1"
authors = ["dxx <dx1898@foxmail.com>"]
edition = "2021"
description = "FeignHTTP macro support"
documentation = "https://docs.rs/feignhttp"
homepage = "https://github.com/dxx/feignhttp"
repository = "https://github.com/dxx/feignhttp"
readme = "README.md"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[dev-dependencies]
trybuild = "1.0.62"
